# syntropic-api

./: .dockerignore  .env  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  build.rs  docker-compose.yaml
.github/workflows/: pr.yaml  precommit.yaml  release.yaml  test.yaml
migrations/0_message/: down.sql  up.sql
protos/: message.proto
src/: amqp.rs  graphql.rs  lib.rs  main.rs  schema.rs  snowflake.rs
src/models/: message.rs
tests/: graphql_test.rs
