[package]
name = "syntropic-api"
version = "1.0.0-dev.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["time"]}
juniper_actix = { git = "https://github.com/graphql-rust/juniper" }
actix-web = "4.3.0"
actix-cors = "0.6.4"
time = "0.3.17"
rand = "0.8.5"
base64 = "0.21.0"
dataloader = "0.16.0"
diesel = { version = "2.0.0", features = ["postgres", "time"] }
deadpool = "0.9.5"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
diesel_migrations = "2.0.0"

[dev-dependencies]
actix-rt = "2.8.0"
serial_test = "1.0.0"
